--- a/subproject/test/CMakeLists.txt
+++ b/subproject/test/CMakeLists.txt
@@ -16,6 +16,10 @@ if (NOT TARGET common)
     FetchContent_Declare(common SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../common")
     FetchContent_MakeAvailable(common)
 endif()
+if (NOT TARGET simple)
+    FetchContent_Declare(simple SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../simple")
+    FetchContent_MakeAvailable(simple)
+endif()
 if (NOT TARGET ryu)
     FetchContent_Declare(ryu SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/../3rdparty/ryu")
     FetchContent_MakeAvailable(ryu)
@@ -35,7 +39,7 @@ function(add_test NAME)
 
   add_executable(${NAME} source/${NAME}.cpp)
 
-  target_link_libraries(${NAME} PRIVATE ${dragonbox} dragonbox::common)
+  target_link_libraries(${NAME} PRIVATE ${dragonbox} dragonbox::common dragonbox::simple)
 
   if(TEST_RYU)
     target_link_libraries(${NAME} PRIVATE ryu::ryu)
