--- a/subproject/simple/CMakeLists.txt
+++ b/subproject/simple/CMakeLists.txt
@@ -1,8 +1,10 @@
-cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
 
 project(dragonbox_simple LANGUAGES CXX)
 
-add_library(dragonbox_simple INTERFACE include/simple_dragonbox.h)
+set(dragonbox_simple_headers include/simple_dragonbox.h)
+
+add_library(dragonbox_simple INTERFACE ${dragonbox_simple_headers})
 add_library(dragonbox::simple ALIAS dragonbox_simple)
 
 target_include_directories(dragonbox_simple
