--- a/.github/workflows/os.yml
+++ b/.github/workflows/os.yml
@@ -10,7 +10,7 @@ jobs:
     name: DragonBox ${{matrix.platform}}
     strategy:
       matrix:
-        platform: [ubuntu-latest, macos-latest, windows-latest]
+        platform: [ubuntu-latest, macos-latest, windows-2025]
     runs-on: ${{ matrix.platform }}
 
     steps:
